test/vm/fails/null_map_key.js

var map = {};
map[null] = null;
